# squelch

./: .gitignore  AGENTS.md  Dockerfile.thor-nemo-baseline  Dockerfile.unified-ampere  Dockerfile.voxtral-asr  README.md  THOR-QUALITY-BASELINE.md  pyproject.toml
native_voice/: __init__.py  audio_ingress.py  diagnostics.py  orchestrator.py  riva_asr_app.py  riva_asr_client.html  riva_pipeline.py
pipecat_bots/: asr_audio_diagnostics.py  asr_factory.py  bot_interleaved_streaming.py  bot_simple_vad.py  bot_tools_test.py  bot_vllm.py  frames.py  magpie_http_tts.py  magpie_websocket_tts.py  orpheus_http_tts.py  voxtral_stt.py
scripts/: compare_asr.py  nemotron.sh  start_asr_tts.sh  start_native_audio_ingress.sh  start_native_riva_asr.sh  start_unified.sh  start_voxtral_asr.sh  voice_agent.sh  voice_agent_test_client.py  voxtral.sh
src/nemotron_speech/: __init__.py  orpheus_tts_server.py  streaming_tts.py  tts_server.py
